--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "react-dom": "^18.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.0.0"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.12.1"
   }
 }
